--- a/06 - SoundCore/soundcore/templates/left-sidebar.html
+++ b/06 - SoundCore/soundcore/templates/left-sidebar.html
@@ -1,63 +1,5 @@
-{% load soundcore_tags %}
-<style>
-    .left-menu {
-        background-color: #161616;
-        height: 100%
-    }
-
-    .icon_box {
-        width: 240px;
-        background-color: transparent;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-        height: 10px;
-        border-radius: 0;
-    }
-
-    .icon_box_column {
-        transform: translateY(-12px);
-    }
-
-    .icon_box:hover {
-        background-color: #404040;
-    }
-
-    .icons {
-        border-bottom: 1px solid #313131;
-        padding-bottom: .5em;
-    }
-
-    .icon_text {
-        color: #e0e0ec
-    }
-
-    .is_icon_active {
-        background-color: #242424;
-    }
-
-    .playlist-wrapper {
-        padding-top: .5em
-    }
-
-    .add-icon-box {
-        height: 25px;
-        width: 25px;
-        background-color: transparent;
-        transform: translateY(-5px);
-        border: 1px solid white;
-        border-radius: 122px;
-    }
-
-    .add-icon-wrapper {
-        display: flex;
-        justify-content: center;
-        padding: .5em;
-        transform: translateX(-25px);
-    }
-</style>
-
+{% load soundcore_tags static %}
+<link rel="stylesheet" href="{% static 'core/css/extra/left-sidebar.css' %}"/>
 
 <aside class="menu left-menu">
     <div class="icons">
@@ -143,110 +85,6 @@
     </div>
 </aside>
 
-<script>
-    const hamburgerElement = document.getElementById('hamburger_icon_wrapper_id')
-    const leftMenuElement = document.getElementsByClassName('left-menu')[0]
-    {% comment %}
+<script async src="{% static 'core/js/extra/left-sidebar/hamburgerEventListener.js' %}"></script>
 
-        left-menu-hidden = Sidebar is hidden
-        !left-menu-hidden = Sidebar is shown
-
-     {% endcomment %}
-
-    hamburgerElement.addEventListener('click', () => {
-        {% comment %}
-            This statement checks if classlist contains Left-Menu-Hidden.
-            Then if it doesn't have the class.
-            AnimeJS resizes the Menu to previous Size and removes the left-menu-hidden.
-         {% endcomment %}
-        {# Open #}
-        if (leftMenuElement.classList.contains('left-menu-hidden')) {
-            anime({
-                targets: '.left-menu',
-                translateX: 0,
-                duration: 500,
-                easing: 'easeOutSine',
-                complete: () => {
-                    leftMenuElement.classList.remove('left-menu-hidden')
-                }
-            })
-            anime({
-                targets: '.left-menu',
-                width: '240',
-                duration: 400,
-                easing: 'easeOutSine',
-            })
-
-        }
-
-            {% comment %}
-                This statement checks if classlist contains Left-Menu-Hidden.
-                This it does have the class.
-                AnimeJS removes the left menu and adds the class in a callback.
-             {% endcomment %}
-            {# Close #}
-        else if (!leftMenuElement.classList.contains('left-menu-hidden')) {
-            anime({
-                targets: '.left-menu',
-                translateX: -500,
-                duration: 500,
-                easing: 'easeOutSine',
-                complete: () => {
-                    leftMenuElement.classList.add('left-menu-hidden')
-                }
-            })
-            anime({
-                targets: '.left-menu',
-                width: '0',
-                duration: 400,
-                easing: 'easeOutSine',
-            })
-        }
-    })
-</script>
-<script async>
-    let mediaQueryListener = window.matchMedia('(max-width: 767px)')
-
-    const watchMediaQueryFunction = (event) => {
-        if (event.matches) {
-            {# Mobile Version #}
-            anime({
-                targets: '.left-menu',
-                translateX: -500,
-                duration: .001,
-                easing: 'easeOutSine',
-                complete: () => {
-                    leftMenuElement.classList.add('left-menu-hidden')
-                }
-            })
-            anime({
-                targets: '.left-menu',
-                width: '0',
-                duration: .0001,
-                easing: 'easeOutSine',
-            })
-        } else if (!event.matches) {
-            {# Desktop Vesion #}
-            leftMenuElement.classList.remove('left-menu-hidden')
-            anime({
-                targets: '.left-menu',
-                translateX: 0,
-                duration: .001,
-                easing: 'easeOutSine',
-                complete: () => {
-                    leftMenuElement.classList.remove('left-menu-hidden')
-                }
-            })
-            anime({
-                targets: '.left-menu',
-                width: '240',
-                duration: .0001,
-                easing: 'easeOutSine',
-            })
-        }
-    }
-    // Init the Function Once
-    watchMediaQueryFunction(mediaQueryListener)
-    // Add listener
-    mediaQueryListener.addListener(watchMediaQueryFunction)
-</script>
+<script async src="{% static 'core/js/extra/left-sidebar/eventMatcher.js' %}"></script>
