--- a/06 - SoundCore/soundcore/soundcore/templates/soundcore/index.html
+++ b/06 - SoundCore/soundcore/soundcore/templates/soundcore/index.html
@@ -181,7 +181,7 @@
                     </div>
                     <div class="column ">
                         <div class="footer_input_anchor">
-                            <progress id='slider_progress' class="progress is-small" value="0"
+                            <progress id='slider_progress' class="progress is-small is-info" value="0"
                                       max="100"></progress>
                             <input id="transparent_slider"
                                    class="slider" step=".01"
@@ -210,7 +210,7 @@
                     </div>
                     <div class="column ">
                         <div class="volume_anchor">
-                            <progress class="progress is-small volume_progress" value="0" max="100"></progress>
+                            <progress class="progress is-small volume_progress is-info" value="0" max="100"></progress>
                             <input class="slider volume_slider" oninput="handleVolumeInputChange(this.value)"
                                    onchange="handleVolumeInputChange(this.value)" step="1"
                                    min="0" max="100" value="0"
