--- a/06 - SoundCore/soundcore/soundcore/static/soundcore/css/responsive.css
+++ b/06 - SoundCore/soundcore/soundcore/static/soundcore/css/responsive.css
@@ -24,4 +24,9 @@
         position: absolute;
         bottom: 10px;
     }
+
+    .brand_image > img {
+        transform: translateY(.6em) translateX(20px) !important;
+    }
+
 }
