--- a/06 - SoundCore/soundcore/templates/base.html
+++ b/06 - SoundCore/soundcore/templates/base.html
@@ -11,11 +11,11 @@
     <!-- Disable Ionicons Pointer -->
     <link rel="stylesheet" href="{% static 'core/css/disable-ionicons-pointer.css' %}" />
     <!-- AnimeJS import for resizing Everything :) -->
-    <script src="{% static 'core/vendor/anime/anime.min.js' %}"></script>
+    <script src="{% static 'vendor/anime/anime.min.js' %}"></script>
     <!-- We need Bulma For Everything. So a global import is good -->
-    <link rel="stylesheet" href="{% static 'core/vendor/bulma/bulma.css' %}">
+    <link rel="stylesheet" href="{% static 'vendor/bulma/bulma.css' %}">
     <!-- Lodash for state management and superpower -->
-    <script src="{% static 'core/vendor/lodash/lodash.js' %}"></script>
+    <script src="{% static 'vendor/lodash/lodash.js' %}"></script>
 
     {% block head %}{% endblock %}
     <title>
