--- a/06 - SoundCore/soundcore/templates/base.html
+++ b/06 - SoundCore/soundcore/templates/base.html
@@ -8,8 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- Icon Import Before Everything -->
     <script type="module" src="https://cdn.jsdelivr.net/npm/ionicons@5.5.1/dist/ionicons/ionicons.esm.js"></script>
-    <!-- Disable Ionicons Pointer -->
-    <link rel="stylesheet" href="{% static 'core/css/disable-ionicons-pointer.css' %}" />
+    <!-- Ionicons Pointer -->
+    <link rel="stylesheet" href="{% static 'core/css/disable_ionicons_pointer.css' %}" />
+    <link rel="stylesheet" href="{% static 'core/css/enable_hamburger_pointer.css' %}" />
     <!-- AnimeJS import for resizing Everything :) -->
     <script src="{% static 'vendor/anime/anime.min.js' %}"></script>
     <!-- We need Bulma For Everything. So a global import is good -->
