Closing Soundcore for now

--- a/06 - SoundCore/soundcore/templates/base.html
+++ b/06 - SoundCore/soundcore/templates/base.html
@@ -24,6 +24,8 @@
     </title>
 </head>
 <body>
+<!-- This CSRF Token will be called by Axios -->
+{% csrf_token %}
 {% block body %} {% endblock %}
 {% block afterbody %} {% endblock %}
 </body>
